# editorconfig-tools

./: .editorconfig  .gitignore  .travis.yml  LICENSE.txt  README.rst  check_editorconfig  editorconfig_tools.py  fix_editorconfig  indent_finder.py  pyproject.toml  setup.cfg  setup.py  test_tools.py  tox.ini
editorconfig_tools/: __main__.py  check_editorconfig.py  editorconfig_tools.py  fix_editorconfig.py
tests/: .editorconfig  indent_space_2_invalid_3.js  indent_space_2_invalid_mixed.js  indent_tab_invalid_mixed.js  indent_tab_invalid_space.js  indent_tab_valid.js  indent_tab_valid_with_spaces.js  latin1_invalid_utf-8-bom.txt  trim_invalid1.txt  trim_invalid2.txt  trim_valid.txt  utf-8-bom_invalid_utf-16be.txt  utf-8-bom_invalid_utf-16le.txt  utf-8-bom_invalid_utf-8.txt
