[metadata]
name = EditorConfig Tools
author = EditorConfig Team
license = BSD-2-Clause AND BSD-3-Clause
description = Tools for correcting files based on EditorConfig files
long_description = file: README.rst

[options]
packages = editorconfig_tools
install_requires = editorconfig; clint
test_suite = test_tools

[options.entry_points]
console_scripts =
    check_editorconfig = editorconfig_tools.check_editorconfig:main
